Revert "Issue #1774 - Make menulist-button visible again in gtk3"
This reverts commit 0a0830ba8bed438f9e22456da56a284e6a05ade1.

--- a/toolkit/themes/linux/global/menulist.css
+++ b/toolkit/themes/linux/global/menulist.css
@@ -73,7 +73,6 @@ menulist[editable="true"] {
 menulist[editable="true"] > .menulist-dropmarker {
   display: -moz-box;
   -moz-appearance: menulist-button;
-  min-width: 2em;
 }
 
 html|*.menulist-editable-input {
